fixing body alignment

--- a/screen.css
+++ b/screen.css
@@ -512,8 +512,7 @@ body
 
 #bodyspecs
 {
-  margin: auto;
-  width: 50%;
+  margin: .5em;
   border: .25em solid #98FB98;
   background-color: #FDF5E6;
 }
